# wallet

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  docker-compose.yaml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yaml
examples/issuer/: Cargo.toml
examples/issuer-types/: Cargo.toml
examples/issuer-types/src/: lib.rs
examples/issuer-web/: .env.development  .gitignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
examples/issuer-web/public/: staticwebapp.config.json
examples/issuer-web/src/: App.tsx
examples/issuer-web/src/Layout/: Footer.tsx  Header.tsx  Logo.tsx  index.tsx
examples/issuer-web/src/Offer/: CreateOffer.tsx  QrCode.tsx  TxCode.tsx  index.tsx
examples/issuer-web/src/api/: index.ts
examples/issuer-web/src/components/: FullLogo.tsx
examples/issuer-web/src/theme/: components.ts  index.ts  palette.ts  typography.ts
examples/issuer-web/src/types/: generated.ts
examples/issuer/src/: handler.rs  main.rs
iOS/: project.yml
iOS/Resources/: credentialData.json
iOS/VercreWallet/: ContentView.swift  Info.plist  VercreWalletApp.swift  core.swift
iOS/VercreWallet.xcodeproj/: project.pbxproj
iOS/VercreWallet.xcodeproj/project.xcworkspace/xcuserdata/goldie.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/VercreWallet.xcodeproj/xcshareddata/xcschemes/: VercreWallet.xcscheme
iOS/VercreWallet.xcodeproj/xcuserdata/goldie.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
iOS/VercreWallet.xcodeproj/xcuserdata/goldie.xcuserdatad/xcschemes/: xcschememanagement.plist
iOS/VercreWallet/Components/: ActionButton.swift  DetailItem.swift  DetailRow.swift  NavigationBar.swift  QRScanner.swift  RoundedRectLabel.swift
iOS/VercreWallet/Counter/: CounterView.swift
iOS/VercreWallet/Credential/: Background.swift  ClaimList.swift  CredentialCard.swift  CredentialDetailView.swift  CredentialList.swift  CredentialRow.swift  DetailRow.swift  Logo.swift
iOS/VercreWallet/Crux/: core.swift  http.swift  key.swift  kv.swift  signer.swift  sse.swift  store.swift
iOS/VercreWallet/Error/: ErrorDetail.swift
iOS/VercreWallet/Issuance/: ClaimTitleItem.swift  ClaimTitleList.swift  IssuanceOffer.swift  IssuanceScan.swift  OfferCard.swift
iOS/VercreWallet/Presentation/: PresentationRequest.swift
iOS/VercreWallet/Utilities/: Color.swift  ImageViewModel.swift
service/: Cargo.toml
service/src/: handler.rs  main.rs
shared/: Cargo.toml  build.rs
shared_types/: Cargo.toml
vcservice/: Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
vcservice/src/: handler.rs  issuer.rs  main.rs  provider.rs
vcservice/src/handler/: issuer.rs  verifier.rs
vcservice/src/provider/: issuer.rs
vcweb/: Dockerfile  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
vcweb/src/: App.tsx  main.tsx  state.tsx
vcweb/src/Home/: index.tsx
vcweb/src/Layout/: Footer.tsx  Header.tsx  Logo.tsx  index.tsx  useAppBarHeight.ts
vcweb/src/Offer/: CreateOffer.tsx  QrCode.tsx  TxCode.tsx  index.tsx
vcweb/src/Request/: CreateRequest.tsx  index.tsx
vcweb/src/api/: index.ts  issuance.ts  verification.ts
vcweb/src/components/: FullLogo.tsx  QrCode.tsx
vcweb/src/theme/: components.ts  index.ts  palette.ts  typography.ts
vcweb/src/types/: generated.ts
wallet/: Cargo.toml  README.md  build.rs  uniffi.toml
wallet/src/: app.rs  capabilities.rs  config.rs  holder.rs  lib.rs  model.rs  provider.rs  view.rs  wallet.udl
wallet/src/app/: issuance.rs
wallet/src/capabilities/: holder.rs  key.rs  sse.rs  store.rs
wallet/src/model/: credential.rs  credentials.json  issuance.rs
wallet/src/snapshots/: vercre_wallet__app__tests__decrement_counter_final.snap  vercre_wallet__app__tests__decrement_counter_optimistic.snap  vercre_wallet__app__tests__increment_counter_final.snap  vercre_wallet__app__tests__increment_counter_optimistic.snap  vercre_wallet__app__tests__set_counter.snap  vercre_wallet__app__tests__set_sse.snap
wallet/src/view/: credential.rs  issuance.rs
wallet/src/view/snapshots/: vercre_wallet__view__credential__tests__claims_display.snap  vercre_wallet__view__credential__tests__developer.snap  vercre_wallet__view__credential__tests__employee.snap  vercre_wallet__view__credential__tests__offer.snap  vercre_wallet__view__issuance__tests__config_summary.snap
wallet/vercre-wallet.xcodeproj/: project.pbxproj
wallet/vercre-wallet.xcodeproj/xcuserdata/goldie.xcuserdatad/xcschemes/: xcschememanagement.plist
