[workspace]
members = ["wallet"]
resolver = "1"

[workspace.package]
authors = ["Vercre"]
edition = "2021"
repository = "https://github.com/vercre/wallet"
rust-version = "1.80"
version = "0.1.0-alpha.0"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
missing_docs = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
anyhow = "1.0.89"
crux_core = "0.9.0"
crux_http = "0.10.1"
serde = { version = "1.0.210", features = ["derive"] }

[workspace.metadata.bin]
cargo-xcode = { version = "=1.11.0" }