[workspace]
members = ["service", "shared_types", "wallet", "examples/issuer", "examples/issuer-types"]
resolver = "1"

[workspace.package]
authors = ["Vercre"]
edition = "2021"
repository = "https://github.com/vercre/wallet"
rust-version = "1.80"
version = "0.1.0-alpha.0"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
missing_docs = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
anyhow = "1.0.91"
axum = { version = "0.7.7", features = ["macros"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
base64ct = "1.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
crux_core = { version = "0.10.0", features = ["typegen"] }
crux_http = { version = "0.10.3", features = ["typegen"] }
crux_kv = { version = "0.5.2", features = ["typegen"] }
dotenv = "0.15.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["alloc"] }
test-utils = { git = "https://github.com/vercre/vc" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
typeshare = "1.0.3"
url = "2.5.2"
vercre-did = { git = "https://github.com/vercre/did" }
vercre-holder = { git = "https://github.com/vercre/vc" }
vercre-issuer = { git = "https://github.com/vercre/vc" }
vercre-verifier = { git = "https://github.com/vercre/vc" }

[workspace.metadata.bin]
cargo-xcode = { version = "=1.7.0" }
