[package]
name = "vcservice"
description = "Example service with endpoints for issuer and verifier to demonstrate the Vercre wallet"
publish = false

authors = ["Vercre"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vercre/wallet"
rust-version = "1.83"
version = "0.1.0-alpha.0"

[lints.rust]
missing_docs = "warn"
unused_extern_crates = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[dependencies]
anyhow = "1.0.94"
axum = { version = "0.7.9", features = ["macros"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133", features = ["alloc"] }
test-utils = { git = "https://github.com/vercre/vc" }
tokio ={ version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors", "set-header", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
typeshare.workspace = true
url = "2.5.4"
vercre-issuer = { git = "https://github.com/vercre/vc" }
vercre-verifier = { git = "https://github.com/vercre/vc" }
