[package]
name = "vercre-wallet"
description = "Shared wallet library based on Crux"
readme = "README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "vercre_wallet"

[features]
typegen = ["crux_core/typegen"]

[dependencies]
async-sse = "5.1.0"
async-std = "1.13.0"
chrono = { version = "0.4.38", features = ["serde"] }
crux_core.workspace = true
crux_http.workspace = true
futures = "0.3.31"
lazy_static = "1.5.0"
serde.workspace = true
serde_json = "1.0.128"
uniffi = "0.28.2"
url.workspace = true
vercre-holder = { git = "https://github.com/vercre/vc" }
wasm-bindgen = "0.2.95"

[dev-dependencies]
assert_let_bind = "0.1.1"
insta = { version = "1.40.0", features = ["yaml"] }

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.28.2", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.28.2", features = ["build"] }
