[package]
name = "vercre-wallet"
description = "Shared wallet library based on Crux"
readme = "README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "vercre_wallet"

[features]
typegen = ["crux_core/typegen"]

[dependencies]
anyhow.workspace = true
async-sse = "5.1.0"
async-std = "1.13.0"
base64ct.workspace = true
chrono = { version = "0.4.38", features = ["alloc", "serde"] }
crux_core.workspace = true
crux_http.workspace = true
crux_kv.workspace = true
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
futures = { version = "0.3.31", features = ["executor"] }
lazy_static = "1.5.0"
rand = "0.8.5"
serde.workspace = true
serde_bytes = "0.11.15"
serde_json = "1.0.132"
thiserror = "1.0.65"
uniffi = "0.28.2"
url.workspace = true
urlencoding = "2.1.3"
vercre-did.workspace = true
vercre-holder.workspace = true
wasm-bindgen = "0.2.95"

[dev-dependencies]
assert_let_bind = "0.1.1"
insta = { version = "1.40.0", features = ["redactions", "yaml"] }

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.28.2", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.28.2", features = ["build"] }
