[package]
name = "issuer-types"
description = "Shared types for the example issuer web application"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
typeshare.workspace = true
vercre-issuer.workspace = true
